--- a/_layouts/two.html
+++ b/_layouts/two.html
@@ -16,7 +16,7 @@ layout: default
     <div class="links">
       <ul>
         <li><a href="/">About</a></li>
-        <li><a href="/resume/">Resume</a></li>
+        <li><a href="/resume.pdf">Resume</a></li>
         <li><a href="/projects/">Projects</a></li>
       </ul>
     </div>
